# math-compute

./: CMakeLists.txt  block.h  main.cpp  ports.hpp
cmake/: compiler-flags.cmake  source-files.cmake
constants/: block-list.hxx  config.hxx
include/: block.h  context.hpp  ports.hpp  signals.h
include/blocks/delays/: delay-off-dynamic.hpp  delay-off.hpp  delay-on-dynamic.hpp  delay-on-off-dynamic.hpp  delay-on-off.hpp  delay-on.hpp
include/blocks/dynamic/: inertial-differential.hpp  inertial.hpp  integrator.hpp  oscillatory.hpp  step-delay.hpp
include/blocks/functions/: exp.hpp  hyperbolic.hpp  ln.hpp  max-value-comp.hpp  max-value.hpp  min-value-comp.hpp  min-value.hpp  sqrt.hpp
include/blocks/interpolation/: inter-poly-4.hpp  piecewise-linear.hpp  plc-code.hpp
include/blocks/logical/: and-not.hpp  and.hpp  equal.hpp  greater-or-equal.hpp  greater.hpp  less-or-equal.hpp  less.hpp  not-equal.hpp  not.hpp  or-not.hpp  or.hpp  xor-not.hpp  xor.hpp
include/blocks/nonlinear/: deadband.hpp  high-threshold.hpp  hysteresis-deadband.hpp  hysteresis-dynamic.hpp  hysteresis.hpp  low-threshold.hpp  saturation-deadband.hpp  saturation.hpp  variable-hysteresis-minus.hpp  variable-hysteresis-plus.hpp  variable-hysteresis.hpp
include/blocks/operators/: absolute-value.hpp  divider.hpp  multiplier.hpp  negate.hpp  sign.hpp  summator.hpp
include/constants/: block-list.hxx
include/nrcki/: scheme.h
src/: config.cpp  register-types.cpp
src/block/: block.cpp
src/scheme/: assign.cpp  freeze-port.cpp  scheme.cpp  set-links.cpp  signals.cpp
(+61 files in other folders)
